<resources>
    <string name="app_name">EditorPerfil</string>


    <string name="titulo_formulario">Completa tu perfil</string>
    <string name="hint_nombre">Nombre completo</string>
    <string name="hint_edad">Edad</string>
    <string name="hint_ciudad">Ciudad</string>
    <string name="hint_correo">Correo electrónico</string>
    <string name="btn_continuar">Continuar</string>


    <string name="titulo_resumen">Resumen de tu perfil</string>
    <string name="label_nombre">Nombre:</string>
    <string name="label_edad">Edad:</string>
    <string name="label_ciudad">Ciudad:</string>
    <string name="label_correo">Correo electrónico:</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="btn_volver_editar">Volver a editar</string>


    <string name="toast_perfil_guardado">Perfil guardado correctamente</string>
</resources>